--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="flex-container">
         <div class="width">
             <h1>Stay Focused on <br> <span>Misson 2022</span></h1>
             <p>“A successful website does three things:
@@ -37,7 +37,27 @@
         </div>
         <div class="width"><img src="images/shapes/shape-6.1.png" alt=""></div>
     </section>
-    <h3>My Misson in <span>2022</span></h3>
+    <section>
+        <h1 id="plan">My Misson in <span>2022</span> </h1>
+        <div class="flex-container">
+            <div class="misson">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h3>Misson</h3>
+                <p>My misson is I want to a full steck web developer in this year 2022.</p>
+            </div>
+            <div class="misson">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h3>Vision</h3>
+                <p>My vision is I will complete my web development course in 12 weeks.</p>
+            </div>
+            <div class="misson">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h3>Goals</h3>
+                <p>I wanna full steck developer in 2 years and achieve my all goals.</p>
+            </div>
+        </div>
+    </section>
+
 
 
 </body>
