last-container added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,28 @@
             </div>
         </div>
     </section>
+    <section class="flex-container">
+        <div class="width"><img src="images/pictures/coding.png" alt=""></div>
+        <div class="width">
+            <h1> <span>Develop</span> <br> Without Limit</h1>
+            <p>There is no limit for web development. Feel free to design and develop you own website with your own
+                choice. And don't forget your hardworks to make a website. If any one say, you are not able to become a
+                web developer prove them. </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/al-nahian-1a2b59216/">Contact</a>
+        </div>
+    </section>
+    <section class="flex-container">
+        <div class="width">
+            <h1>Know Your <br> <span>Global Community</span> </h1>
+            <p>The term world community is used primarily in political and humanitarian contexts to describe an
+                international aggregate of nation states of widely varying types. In most connotations, the term is used
+                to convey meanings attached to consensus or inclusion of all people in all lands and their governments.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/al-nahian-1a2b59216/">Contact
+                Me</a>
+        </div>
+        <div><img class="width" src="images/pictures/project.png" alt=""></div>
+    </section>
 
 
 
